test/regtest/cases/errors/expect_after.kum
| disable_jsexec
алг нач
   цел i
   i := ф(8)
кон

алг цел ф(цел й)
   надо знач > 10
нач
   знач := й + 1
кон